# MLP

./: CMakeLists.txt  Readme.md
src/: Description.md  Makefile  Research.md  main.cc
src/controller/: controller.cc  controller.h
src/model/: perceptron.cc  perceptron.h
src/model/graphnetwork/: graphnetwork.cc  graphnetwork.h  graphneuron.cc  graphneuron.h
src/model/interfaces/: neuralnetwork.h  neuron.h
src/model/matrixnetwork/: matrixnetwork.cc  matrixnetwork.h  matrixneuron.cc  matrixneuron.h
src/model/storage/: networks_storage.cc  networks_storage.h
src/model/utils/: utils.cc  utils.h
src/resources/: resources.qrc
src/tests/: 80graph_52_4.wgts  80graph_52_5.wgts  graph_5_81.wgts  matrix_4_5_5.wgts  matrix_5_5_10.wgts  tests.cc
src/view/: mainwindow.cc  mainwindow.h  mainwindow.ui
src/view/canvas/: canvas.cc  canvas.h
